--- a/index.html
+++ b/index.html
@@ -120,14 +120,19 @@
         }
     }
 </style>
-
+<head>
+    <title>
+        <i>i </i>scout.co.in ...
+    </title>
+        
+</head>
 <div class="overlay"></div>
 <div class="stars" aria-hidden="true"></div>
 <div class="starts2" aria-hidden="true"></div>
 <div class="stars3" aria-hidden="true"></div>
 <main class="main">
     <section class="contact">
-        <h1 class="title"><i>i</i>scout.co.in ...</h1>
+        <h1 class="title"><i>i </i>scout.co.in ...</h1>
         <h2 class="sub-title">Site Under Construction</h2>
     </section>
 </main>
